[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Backgrounds/RandomBackground.gd" type="Script" id=1]

[node name="RandomBackground" type="Node2D"]

script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1216.0
margin_bottom = 656.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0235294, 0.0235294, 0.117647, 1 )

[node name="LVL1" type="Sprite" parent="."]

position = Vector2( 640, 360 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="LVL2" type="Sprite" parent="."]

position = Vector2( 640, 360 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="LVL3" type="Sprite" parent="."]

position = Vector2( 640, 360 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Rand" type="Sprite" parent="."]

position = Vector2( 640, 360 )
_sections_unfolded = [ "Transform" ]

[node name="TweenLVL1" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TweenLVL2" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TweenLVL3" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TweenRand" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0


